--- a/CAC2526/index.html
+++ b/CAC2526/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/inspect-eye.svg" />
+    <link rel="alternate icon" type="image/png" href="/eye.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>app.json</title>
   </head>
